# large-anon

./: cabal.project  large-anon.cabal
src/Data/Record/: Anonymous.hs
src/Data/Record/Anonymous/: Internal.hs  JSON.hs  Plugin.hs
src/Data/Record/Anonymous/Plugin/: Constraints.hs  GhcTcPluginAPI.hs  NameResolution.hs  Parsing.hs  Record.hs  Solver.hs
src/Data/Record/Anonymous/Plugin/Constraints/: HasField.hs  RecordConstraints.hs  RecordMetadata.hs
test/Test/Record/Anonymous/: Sanity.hs
